testsuite/tests/deriving/should_fail/T7148.stderr
T7148.hs:27:40: error: [GHC-25897]
    • Couldn't match type ‘b’ with ‘Tagged a b’
        arising (via a quantified constraint) from
          the coercion of derived method ‘iso2’
      When trying to solve the quantified constraint
        forall b1.
        Coercible
          (SameType b1 () -> SameType b1 b)
          (SameType b1 () -> SameType b1 (Tagged a b))
        arising from the coercion of derived method ‘iso2’
      ‘b’ is a rigid type variable bound by
        the deriving clause for ‘IsoUnit (Tagged a b)’
        at T7148.hs:27:40-46
      Note: The type constructor ‘SameType’ has nominal role in its third argument.
    • When deriving the instance for (IsoUnit (Tagged a b))

T7148.hs:27:40: error: [GHC-25897]
    • Couldn't match type ‘b’ with ‘Tagged a b’
        arising (via a quantified constraint) from
          the coercion of derived method ‘iso1’
      When trying to solve the quantified constraint
        forall b1.
        Coercible
          (SameType () b1 -> SameType b b1)
          (SameType () b1 -> SameType (Tagged a b) b1)
        arising from the coercion of derived method ‘iso1’
      ‘b’ is a rigid type variable bound by
        the deriving clause for ‘IsoUnit (Tagged a b)’
        at T7148.hs:27:40-46
      Note: The type constructor ‘SameType’ has nominal role in its second argument.
    • When deriving the instance for (IsoUnit (Tagged a b))

